--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "handlebars": "^4.1.0",
+    "method-override": "^3.0.0",
     "mysql": "^2.16.0",
-    "mysql2": "^1.6.5"
+    "mysql2": "^1.6.5",
+    "sequelize": "^4.43.0"
   }
 }
