--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "root",
-    "password": "rootroot5",
-    "database": "pupps",
+    "password": "Password1!",
+    "database": "puppy_info",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "rootroot5",
+    "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "rootroot5",
+    "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
