--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,17 +10,12 @@
             "name": "Attach by Process ID",
             "processId": "${command:PickProcess}"
         },
-        {
-            "type": "node",
-            "request": "attach",
-            "name": "Attach by Process ID",
-            "processId": "${command:PickProcess}"
-        },
+      
         {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}\\index.js"
+            "program": "${workspaceFolder}/server.js"
         }
     ]
 }
