--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     },
     "rules": {
         "linebreak-style":"off",
-        "max-len":"off"
+        "max-len":"off",
+        "require-jsdoc":"off"
     }
 }
