--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.15.6",
+    "google-maps": "^3.3.0",
     "handlebars": "^4.1.0",
     "jsonwebtoken": "^8.5.0",
     "method-override": "^3.0.0",
